--- a/app/views/negotiator/view.html.erb
+++ b/app/views/negotiator/view.html.erb
@@ -1,3 +1,7 @@
 <h1 class="m-3">Результат поиска</h1>
 
 <%== @output %>
+
+<button type="button" class="btn btn-link">
+    <%= link_to 'Домой', root_path %>
+</button>
